--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,5 +52,5 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
       - run-tests
